getSystemProperties()与getSystemEnvironment()会发生异常情况注释